<resources>
    <string name="app_name">All in one</string>
    <string name="logo1">Let`s get it</string>
    <string name="logo2">started!</string>
    <string name="pic_keys">keys</string>
    <string name="pic_info">info</string>
    <string name="button_menu">Menu</string>
    <string name="button_teor">Teor ver</string>
    <string name="button_back">BACK</string>
    <string name="btn_next">➡</string>
    <string name="btn_opersys">Operat system</string>
    <string name="btn_shem">Circuitry</string>
    <string name="update_check">Check for update or jerk off</string>
    <string-array name="teor_block">
        <item>Блок 1️⃣
            Теория вероятности
            Теория вероятности - это наука о случайных событиях и их характеристиках.
            Любой из взаимоисключающих друг друга исходов данного опыта или явления называется элементраным исходом.(ЭИ)
            Событием называется некоторая совокупность элементарных исходов. Если ЭИ конечное число, то событием является любая совокупность элементарных исходов.
            Если событие наступает в результате любого элементарного исхода, то оно называется достоверным.
            Если событие не содержит ни одного ЭИ, то оно наз. невозможным.
            Событие называется детерминированным если его исход предопределён.
            Событие называется случайным если множество его ЭИ является собственным подмножеством множества всех элементарных исходов.
            Два события наз. равными если множества их элементарных исходов совпадает.
            Два события наз. несовместными если множества их элементарных исходов не пересекаются. В противном случае наоборот.
            Операции над событиями.
        1. Сложение событий
        Суммой событий A и B называется событие C которое означает осуществление хотя бы одного из любых соб.
        2. Произведение событий
        A и B наз. событие C которое означает одновременное осуществление обоих событий. A*B
        3. Разность событий
        Событие C называется разностью событий A и B если оно означает осуществление соб А при одновременном неосуществлении соб В.
        4. Дополнительная или противоположная событий
            Соб A(с чертой сверху) наз. дополнением противоположной соб. А если оно состоит из всех элементарных исходов данного опыта не входящее в соб. А.
        5. Следование событий
        Говорят, что событие В следует из события А если из осуществления события А следует осуществление В. А↪В
            Различные подходы к понятию вероятности
            Статистический подход
            Пусть событие А в серии n независимых испытаний произошло m раз, тогда m\n - называется jтносительной частотой соб. А в данной серии испытаний.
        </item>
        <item>Блок 2️⃣
                Условной вероятностью бла
        </item>
        <item>Блок 3️⃣
            бла б pft,fkcz сука бя
        </item>
        <item>Блок 4️⃣
            бла бл pft,fkcz сука бя
        </item>
        <item>Блок 5️⃣
            бла ба pft,fkcz сука бя
        </item>
        <item>Блок 6️⃣
            бла ла pft,fkcz сука бя
        </item>
        <item>Блок 7️⃣
            ба бла pft,fkcz сука бя
        </item>
        <item>Блок 8️⃣
            бл бла сука бя я использовал string-array чтобы ебанные блоки коллоквиума перелистывать. Моя счётчик count считает сколько ты клацаешь на бляцкую кнопку и соответственно всавляет текст с нужным блоком.
        </item>
    </string-array>
</resources>