<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="83dp"
        android:layout_height="660dp"
        android:background="@color/gray"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="82dp"
            android:layout_height="72dp"
            android:layout_marginBottom="10dp"
            android:contentDescription="@string/pic_keys"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/ic_icn" />

        <ImageButton
            android:id="@+id/settings_btn"
            android:layout_width="84dp"
            android:layout_height="80dp"
            android:layout_marginBottom="40dp"
            app:layout_constraintBottom_toTopOf="@+id/imageView"
            android:contentDescription="@string/pic_keys"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@android:drawable/ic_menu_preferences" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/texthome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/audiowide"
        android:text="@string/logo1"
        android:textColor="@color/black"
        android:textSize="40sp"
        app:layout_constraintStart_toEndOf="@+id/constraintLayout"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/texthome2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="20dp"
        android:fontFamily="@font/audiowide"
        android:text="@string/logo2"
        android:textColor="@color/Primaray"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_menu"
        android:layout_width="176dp"
        android:layout_height="76dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="200dp"
        android:fontFamily="@font/audiowide"
        android:text="@string/button_menu"
        android:textAlignment="center"
        android:textColor="#E8D5D5"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_teorver"
        android:layout_width="176dp"
        android:layout_height="76dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="300dp"
        android:fontFamily="@font/audiowide"
        android:text="@string/button_teor"
        android:textAlignment="center"
        android:textColor="#E8D5D5"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_opersys"
        android:layout_width="176dp"
        android:layout_height="76dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="400dp"
        android:fontFamily="@font/audiowide"
        android:text="@string/btn_opersys"
        android:textAlignment="center"
        android:textColor="#E8D5D5"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_shema"
        android:layout_width="176dp"
        android:layout_height="76dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="500dp"
        android:fontFamily="@font/audiowide"
        android:text="@string/btn_shem"
        android:textAlignment="center"
        android:textColor="#E8D5D5"
        android:textSize="21sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
